# xtensor-signal

./: .gitignore  CMakeLists.txt  environment-dev.yml  xtensor-signalConfig.cmake.in
.github/workflows/: ghworkflow.yml
benchmark/: CMakeLists.txt  lfilter_benchmark.cpp  main.cpp
include/xtensor-signal/: detrend.hpp  find_peaks.hpp  lfilter.hpp  savitzky_golay.hpp
test/: CMakeLists.txt  detrend_test.cpp  find_peaks_test.cpp  lfilter_test.cpp  savitzky_golay_test.cpp
